[package]
name = "itchy"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
version = "0.2.1"
description = "Nom-based parser library for NASDAQ ITCH protocol"
repository = "https://github.com/adwhit/itchy-rust"
keywords = ["nasdaq", "itch", "nom"]
license = "MIT"
edition = "2018"

[dependencies]
nom = "4.2"
arrayvec = { version = "0.7.2", features = ["serde"] }
decimal = "2.1.0"
error-chain = "0.12.4"
flate2 = "1.0.22"
serde = { version = "1.0.130", features = ["derive"] }
mmm-us = {path = "../mmm-us"}
