[package]
name = "mmm-coinbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.16"
futures-util = "0.3.16"
log = "0.4.14"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
serde_with = "1.9.4"
thiserror = "1.0.26"
tokio = { version = "1.10.1", features = ["full"] }
tokio-stream = "0.1.7"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
mmm-core = { path = "../mmm-core" }

[dev-dependencies]
coinbase-pro-rs = "0.7.1"
structopt = "0.3.22"
async-compression =  { version = "0.3.8", features = ["tokio", "zstd"] }
