[package]
name = "mmm-nasdaq"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
structopt = "0.3.22"
# mmm-core = { path = "../mmm-core"}
mmm-us = {path = "../mmm-us"}
anyhow = "1.0.42"
zstd = "0.8.0"
serde_json = "1.0.69"
rayon = "1.5.1"
itertools = "0.10.1"
itchy = { path = "../itchy-rust"}

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

