[package]
name = "mmm-nyse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
structopt = "0.3.22"
# mmm-core = { path = "../mmm-core"}
mmm-us = {path = "../mmm-us"}
anyhow = "1.0.42"
zstd = "0.8.0"
serde_json = "1.0.69"
rayon = "1.5.1"
itertools = "0.10.1"
decimal = "2.1.0"
taq  = { path = "../taq-rust"}
flate2 = "1.0.23"


[profile.release]
opt-level = 3