[package]
edition = "2021"
name = "mmm-us"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
chrono = {version = "0.4.19", features = ["serde"]}
derive-new = "0.5.8"
getset = "0.1.1"
glob = "0.3.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
mmm-core = {path = "../mmm-core"}
pyo3 = "0.13.1"
rand = "0.8.3"
serde = {version = "1.0.123", features = ["derive"]}
thiserror = "1.0.23"
zstd = "0.8.0"
