[package]
edition = "2018"
name = "taq"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arraystring = {version = "0.3.0", features = ["serde-traits"]}
arrayvec = {version = "0.7.2", features = ["serde"]}
csv = "1.1"
decimal = "2.1.0"
error-chain = "0.12.4"
flate2 = "1.0.22"
# itchy = {path = "../itchy-rust"}
# mmm-core = {path = "../mmm-core"}
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = {version = "1.0.130", features = ["derive"]}
mmm-us={path = "../mmm-us"}
